one sentence addressing participation implication; fixed #13; addressed in the memo #1

--- a/paper/dcpo-macrointerest.bib
+++ b/paper/dcpo-macrointerest.bib
@@ -30,6 +30,22 @@
   owner = {fredsolt}
 }
 
+@article{Anderson2007,
+  title = {The {{End}} of {{Economic Voting}}? {{Contingency Dilemmas}} and the {{Limits}} of {{Democratic Accountability}}},
+  shorttitle = {The {{End}} of {{Economic Voting}}?},
+  author = {Anderson, Christopher J.},
+  year = {2007},
+  journal = {Annual Review of Political Science},
+  volume = {10},
+  number = {1},
+  pages = {271--296},
+  doi = {10.1146/annurev.polisci.10.050806.155344},
+  urldate = {2023-11-28},
+  abstract = {The predominant normative justification for research on economic voting has been its essential role in shaping democratic accountability. A systematic examination of this literature reveals, however, that economic voting is highly contingent on two critical moderating factors: voters themselves and the political context in which they make judgments. The trend toward a better and more realistic understanding of economic voting produced by almost four decades of empirical research has created what I label ``contingency dilemmas'' for the field's normative foundations because economic voting does not function as envisioned by advocates of democratic accountability. This essay reviews these empirical findings and critically examines how they affect the economic voting paradigm. It argues that, when viewed from a normative perspective, contingent accountability is clearly problematic, and it calls for a reconsideration of the normative underpinnings of the economic voting paradigm in light of the current state of knowledge.},
+  langid = {english},
+  keywords = {democratic theory,elections,political behavior,political economy,representation}
+}
+
 @article{BeachEtAl2018,
   title = {How Campaigns Enhance European Issues Voting during European Parliament Elections},
   author = {Beach, Derek and Hansen, Kasper M. and Larsen, Martin V.},
@@ -567,6 +583,20 @@
   abstract = {Do democratic regimes depend on public support to avoid backsliding? Does public support, in turn, respond thermostatically to changes in democracy? Two prominent recent studies (Claassen 2020a; 2020b) reinvigorated the classic hypothesis on the positive relationship between public support for democracy and regime survival{\textemdash}and challenged its reciprocal counterpart{\textemdash}by using a latent variable approach to measure mass democratic support from cross-national survey data. However, both studies used only the point estimates of democratic support. We show that incorporating the concomitant measurement uncertainty into these analyses reveals that there is no support for either study's conclusion. Efforts to minimize the uncertainty by incorporating additional survey data still fail to yield evidence in support of either hypothesis. These results underscore the need for both more nuanced analyses of the relationships between public support and democracy and taking measurement uncertainty into account when working with latent variables.},
   langid = {english},
   file = {D:\zotero_system\storage\GEDA4WNZ\Tai et al2022_Democracy, Public Support, and Measurement Uncertainty.pdf}
+}
+
+@book{VerbaEtAl1995a,
+  title = {Voice and {{Equality}}: {{Civic Voluntarism}} in {{American Politics}}},
+  shorttitle = {Voice and {{Equality}}},
+  author = {Verba, Sidney and Schlozman, Kay Lehman and Brady, Henry E.},
+  year = {1995},
+  month = sep,
+  publisher = {{Harvard University Press}},
+  abstract = {This book confirms Alexis de Tocqueville's idea, dating back a century and a half, that American democracy is rooted in civil society. Citizens' involvement in family, school, work, voluntary associations, and religion has a significant impact on their participation as voters, campaigners, donors, community activists, and protesters.The authors focus on the central issues of involvement: how people come to be active and the issues they raise when they do. They find fascinating differences along cultural lines, among African-Americans, Latinos, and Anglo-Whites, as well as between the religiously observant and the secular. They observe family activism moving from generation to generation, and they look into the special role of issues that elicit involvement, including abortion rights and social welfare.This far-reaching analysis, based on an original survey of 15,000 individuals, including 2,500 long personal interviews, shows that some individuals have a greater voice in politics than others, and that this inequality results not just from varying inclinations toward activity, but also from unequal access to vital resources such as education. Citizens' voices are especially unequal when participation depends on contributions of money rather than contributions of time. This deeply researched study brilliantly illuminates the many facets of civic consciousness and action and confirms their quintessential role in American democracy.},
+  googlebooks = {RUkvEAAAQBAJ},
+  isbn = {978-0-674-94293-6},
+  langid = {english},
+  keywords = {Political Science / General}
 }
 
 @article{WooEtAl2023,
