--- a/paper/submission/memo.bib
+++ b/paper/submission/memo.bib
@@ -1,3 +1,19 @@
+@article{CaugheyEtAl2019,
+  ids = {CaugheyEtAl2019a,caugheyₚolicyₙodate},
+  title = {Policy Ideology in European Mass Publics, 1981{\textendash}2016},
+  author = {Caughey, Devin and O'Grady, Tom and Warshaw, Christopher},
+  year = {2019},
+  journal = {American Political Science Review},
+  pages = {1--20},
+  issn = {0003-0554, 1537-5943},
+  doi = {10.1017/S0003055419000157},
+  abstract = {Using new scaling methods and a comprehensive public opinion dataset, we develop the first survey-based time-series{\textendash}cross-sectional measures of policy ideology in European mass publics. Our dataset covers 27 countries and 36 years and contains nearly 2.7 million survey responses to 109 unique issue questions. Estimating an ordinal group-level IRT model in each of four issue domains, we obtain biennial estimates of the absolute economic conservatism, relative economic conservatism, social conservatism, and immigration conservatism of men and women in three age categories in each country. Aggregating the group-level estimates yields estimates of the average conservatism in national publics in each biennium between 1981{\textendash}82 and 2015{\textendash}16. The four measures exhibit contrasting cross-sectional cleavages and distinct temporal dynamics, illustrating the multidimensionality of mass ideology in Europe. Subjecting our measures to a series of validation tests, we show that the constructs they measure are distinct and substantively important and that they perform as well as or better than one-dimensional proxies for mass conservatism (left{\textendash}right self-placement and median voter scores). We foresee many uses for these scores by scholars of public opinion, electoral behavior, representation, and policy feedback.},
+  langid = {english},
+  keywords = {IRT},
+  timestamp = {2019-12-09T23:39:44Z},
+  file = {D:\zotero_system\storage\BWH8ZK9W\Caughey et al2019_Policy ideology in european mass publics, 1981–2016.pdf}
+}
+
 @article{Efron1975,
   title = {The {{Efficiency}} of {{Logistic Regression Compared}} to {{Normal Discriminant Analysis}}},
   author = {Efron, Bradley},
@@ -47,6 +63,22 @@
   date-added = {2023-04-03 12:55:50 -0500},
   date-modified = {2023-05-02 10:20:02 -0500},
   file = {D:\zotero_system\storage\NUKQ4QN5\Peterson et al2022_Macrointerest.pdf}
+}
+
+@article{TaiEtAl2022a,
+  title = {Democracy, Public Support, and Measurement Uncertainty},
+  author = {Tai, Yuehong `Cassandra' and Hu, Yue and Solt, Frederick},
+  year = {2022},
+  month = may,
+  journal = {American Political Science Review},
+  pages = {First View},
+  publisher = {{Cambridge University Press}},
+  issn = {0003-0554, 1537-5943},
+  doi = {10.1017/S0003055422000429},
+  urldate = {2022-05-06},
+  abstract = {Do democratic regimes depend on public support to avoid backsliding? Does public support, in turn, respond thermostatically to changes in democracy? Two prominent recent studies (Claassen 2020a; 2020b) reinvigorated the classic hypothesis on the positive relationship between public support for democracy and regime survival{\textemdash}and challenged its reciprocal counterpart{\textemdash}by using a latent variable approach to measure mass democratic support from cross-national survey data. However, both studies used only the point estimates of democratic support. We show that incorporating the concomitant measurement uncertainty into these analyses reveals that there is no support for either study's conclusion. Efforts to minimize the uncertainty by incorporating additional survey data still fail to yield evidence in support of either hypothesis. These results underscore the need for both more nuanced analyses of the relationships between public support and democracy and taking measurement uncertainty into account when working with latent variables.},
+  langid = {english},
+  file = {D:\zotero_system\storage\GEDA4WNZ\Tai et al2022_Democracy, Public Support, and Measurement Uncertainty.pdf}
 }
 
 @article{WooEtAl2023,
