explain why using OECD; fixed #14; addressed in the memo #1

--- a/paper/dcpo-macrointerest.bib
+++ b/paper/dcpo-macrointerest.bib
@@ -244,17 +244,6 @@
   file = {D:\zotero_system\storage\DF6KE5AG\Hu et al2023_Support for Democracy Is Multidimensional.pdf}
 }
 
-@book{Inglehart2005,
-  title = {Modernization, Cultural Change, and Democracy},
-  author = {Inglehart, Ronald and Welzel, Christian},
-  year = {2005},
-  publisher = {{Cambridge University Press}},
-  address = {{Cambridge}},
-  url = {https://www.google.com/books/edition/Modernization_Cultural_Change_and_Democr/O3VBq2rVRJMC?hl=en&gbpv=1&printsec=frontcover},
-  date-added = {2023-04-25 19:16:04 -0500},
-  date-modified = {2023-04-25 19:16:04 -0500}
-}
-
 @article{KastellecEtAl2015,
   title = {Polarizing the Electoral Connection: Partisan Representation in Supreme Court Confirmation Politics},
   author = {Kastellec, Jonathan P. and Lax, Jeffrey R. and Malecki, Michael and Phillips, Justin H.},
@@ -585,18 +574,15 @@
   file = {D:\zotero_system\storage\GEDA4WNZ\Tai et al2022_Democracy, Public Support, and Measurement Uncertainty.pdf}
 }
 
-@book{VerbaEtAl1995a,
-  title = {Voice and {{Equality}}: {{Civic Voluntarism}} in {{American Politics}}},
-  shorttitle = {Voice and {{Equality}}},
-  author = {Verba, Sidney and Schlozman, Kay Lehman and Brady, Henry E.},
+@book{VerbaEtAl1995,
+  title = {Voice and Equality: Civic Voluntarism in American Politics},
+  author = {Verba, Sidney and Schlozman, Kay Lehman and Brady, Henry E. and Brady, Henry E.},
   year = {1995},
-  month = sep,
-  publisher = {{Harvard University Press}},
-  abstract = {This book confirms Alexis de Tocqueville's idea, dating back a century and a half, that American democracy is rooted in civil society. Citizens' involvement in family, school, work, voluntary associations, and religion has a significant impact on their participation as voters, campaigners, donors, community activists, and protesters.The authors focus on the central issues of involvement: how people come to be active and the issues they raise when they do. They find fascinating differences along cultural lines, among African-Americans, Latinos, and Anglo-Whites, as well as between the religiously observant and the secular. They observe family activism moving from generation to generation, and they look into the special role of issues that elicit involvement, including abortion rights and social welfare.This far-reaching analysis, based on an original survey of 15,000 individuals, including 2,500 long personal interviews, shows that some individuals have a greater voice in politics than others, and that this inequality results not just from varying inclinations toward activity, but also from unequal access to vital resources such as education. Citizens' voices are especially unequal when participation depends on contributions of money rather than contributions of time. This deeply researched study brilliantly illuminates the many facets of civic consciousness and action and confirms their quintessential role in American democracy.},
-  googlebooks = {RUkvEAAAQBAJ},
-  isbn = {978-0-674-94293-6},
-  langid = {english},
-  keywords = {Political Science / General}
+  volume = {4},
+  publisher = {{Cambridge Univ Press}},
+  owner = {Sammo},
+  keywords = {Political Science / General},
+  timestamp = {2019-12-31T01:30:50Z}
 }
 
 @article{WooEtAl2023,
